--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <nav>
+    <div id="session">
+      <% if admin_signed_in? %>
+        <%= link_to 'Sair', destroy_admin_session_path, method: :delete  %>
+      <% else %>
+        <%= link_to 'Cadastre-se' %>
+        <%= link_to 'Entrar' %>
+      <% end %>
+
+      <% if admin_signed_in? %>
+        Olá, <%= current_admin.email %>
+      <% end %>
+  </div>
+    </nav>
+
+
     <%= yield %>
   </body>
 </html>
