Admin removes a payment method

--- a/app/views/admin/payment_methods/show.html.erb
+++ b/app/views/admin/payment_methods/show.html.erb
@@ -7,5 +7,6 @@
 <p><%= number_to_currency @payment_method.max_tax %></p>
 <p><%= @payment_method.status ? 'Ativo' : 'Inativo' %></p>
 
-<%= link_to 'Editar', edit_admin_payment_method_path %>
+<%= link_to 'Editar', edit_admin_payment_method_path(@payment_method) %>
 <%= link_to "Voltar", admin_payment_methods_path %>
+<%= link_to 'Apagar', [:admin, @payment_method], method: :delete, data: { confirm: 'Are you sure? '} %>
