--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
 <h1>PayNow</h1>
-<p>Simplifique o recebimento de cobranças e automatize seu negócio</p>
+
+<h3>Simplifique o recebimento de cobranças e automatize seu negócio</h3>
