--- a/app/views/admin/payment_methods/index.html.erb
+++ b/app/views/admin/payment_methods/index.html.erb
@@ -4,10 +4,30 @@
   <%= 'Nenhum meio de pagamento disponível' %>
 <% end %>
 
-<% @payment_methods.each do |payment_method| %>
-  <%= link_to payment_method.name, admin_payment_method_path(payment_method) %>
-  <%= payment_method.status ? 'Ativo' : 'Inativo' %>
-<% end %>
+<div class="container-fluid">
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th><%= 'Nome' %></th>
+      <th><%=  'Forma de Pagamento' %></th>
+      <th><%= 'Status' %></th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<%= link_to 'Voltar', root_path %>
-<%= link_to 'Cadastrar Meio de Pagamento', new_admin_payment_method_path %>
+<tbody>
+    <% @payment_methods.each do |payment_method| %>
+      <tr>
+        <td><%= link_to payment_method.name, admin_payment_method_path(payment_method) %></td>
+        <td> <%= image_tag payment_method.icon, size: "40x40" %>
+        <td><%= payment_method.status ? 'Ativo' : 'Inativo' %></td>
+      </tr>
+    <% end %>
+  </tbody>
+
+
+</table>
+</div>
+
+<%= link_to 'Voltar', root_path, class: 'btn btn-primary' %>
+<%= link_to 'Cadastrar Meio de Pagamento', new_admin_payment_method_path, class: 'btn btn-primary'  %>
