--- a/app/views/admin/payment_methods/new.html.erb
+++ b/app/views/admin/payment_methods/new.html.erb
@@ -10,22 +10,16 @@
   
   <h1>Novo Meio de Pagamento</h1>
 
-<%= form_with model: [:admin, @payment_method] do |form| %>
+<%= form_with model: [:admin, @payment_method] do |form| %> 
+
+  <p><%= form.label :form_of_payment %></p>
+  <p><%= form.collection_select :form_of_payment, human_attribute_form_of_payments, :first, :last, { include_blank: 'Selecione' } %></p>
   <p><%= form.label :name %></p>
   <p><%= form.text_field :name %></p>
   <p><%= form.label :tax %></p>
-  <p><%= form.number_field :tax %></p>
+  <p><%= form.number_field :tax, step: 0.1 %></p>
   <p><%= form.label :max_tax %></p>
-  <p><%= form.number_field :max_tax %></p>
-  <p><%= form.label :status %></p>
-  <div>
-    <%= form.radio_button :status, true %>
-    <%= form.label 'Ativo' %>
-    <%= form.radio_button :status, false %>
-    <%= form.label 'Inativo' %>
-  </div>
-  <p><%= form.label :icone, 'Ícone' %></p>
-  <p><%= form.file_field :icone %></p>
+  <p><%= form.number_field :max_tax, step: 0.1 %></p>
   <p><%= form.submit 'Criar' %></p>
 
 <% end %>
