--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,28 +11,53 @@
   </head>
 
   <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <%= link_to 'PayNow', root_path, class: 'navbar-brand' %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div id="session" class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
+  <% if admin_signed_in? %>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      Olá, <%= current_admin.email %>
+    </li>
+    
+    <li class="nav-item">
+     <%= link_to 'Sair', destroy_admin_session_path, method: :delete, class: 'nav-link' %>
+    </li>
+
+    <li class="nav-item">
+       <%= link_to 'Meios de Pagamentos', admin_payment_methods_path, class: 'nav-link' %>
+    </li> 
+  </ul>
+
+    <% else %>
+
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <%= link_to 'Cadastre-se', '#', class: 'nav-link' %>
+    </li>
+    <li id="login" class="nav-item">
+      <%= link_to 'Entrar','#', class: 'nav-link' %>
+    </li>
+  </ul>
+
+  <% end %>
+
+</nav>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <nav>
-    <div id="session">
-
-      <% if admin_signed_in? %>
-        Olá, <%= current_admin.email %>
-        <%= link_to 'Meios de Pagamentos', admin_payment_methods_path %>
-      <% end %>
-
-      <% if admin_signed_in? %>
-        <%= link_to 'Sair', destroy_admin_session_path, method: :delete  %>
-      <% else %>
-        <%= link_to 'Cadastre-se' %>
-        <%= link_to 'Entrar' %>
-      <% end %>
-
-  </div>
-    </nav>
-
-
+  <div class="container-fluid">
     <%= yield %>
+  </div>
+
   </body>
 </html>
