--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       </li> 
 
       <li class="nav-item">
-        <%= link_to 'Empresas', '#', class: 'nav-link' %>
+        <%= link_to 'Cadastre Sua Empresa', new_user_company_path, class: 'nav-link' %>
       </li>
     </ul>
 
