--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,10 @@
     <li class="nav-item">
        <%= link_to 'Meios de Pagamentos', admin_payment_methods_path, class: 'nav-link' %>
     </li> 
+
+    <li class="nav-item">
+       <%= link_to 'Empresas', admin_companies_path, class: 'nav-link' %>
+    </li> 
   </ul>
 
 
