--- a/app/views/user/companies/show.html.erb
+++ b/app/views/user/companies/show.html.erb
@@ -6,3 +6,5 @@
 <dd><%= @company.billing_address %></dd>
 <dt><%= @company.class.human_attribute_name(:billing_email ) %></dt>
 <dd><%= @company.billing_email  %></dd>
+<dt><%= @company.class.human_attribute_name(:token) %></dt>
+<dd><%= @company.token %></dd>
