--- a/app/views/admin/companies/edit.html.erb
+++ b/app/views/admin/companies/edit.html.erb
@@ -1,3 +1,12 @@
+<% if @company.errors.present?%>
+  <p>Foram encontrados <%= @company.errors.count  %> erro(s): </p>
+  <ul>
+    <% @company.errors.full_messages.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <h1>Editando Cadastro de Empresa</h1>
 
 <%= form_with model: [:admin, @company] do |form| %> 
