--- a/app/views/admin/companies/index.html.erb
+++ b/app/views/admin/companies/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Lista de Empresas</h1>
 
+<% if @companies.empty? %>
+  <%= 'Nenhuma empresa cadastrada' %>
+<% end %>
+
 <div class="container-fluid">
 <table class="table table-hover">
   <thead>
