--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,10 @@
       <li class="nav-item">
         <%= link_to 'Cadastre Sua Empresa', new_user_company_path, class: 'nav-link' %>
       </li>
+
+      <li class="nav-item">
+        <%= link_to 'Meios de Pagamentos Disponíveis', user_payment_methods_path, class: 'nav-link' %>
+      </li>
     </ul>
 
     <% else %>
