--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,6 +64,11 @@
     <ul class="navbar-nav mr-auto">
     
     <% if current_user.company_id? %>
+
+      <li class="nav-item">
+        <%= link_to 'Minha Empresa', my_company_user_company_path(current_user.company), class: 'nav-link' %>
+      </li>
+
       <li class="nav-item">
         <%= link_to 'Meios de Pagamentos Disponíveis', user_payment_methods_path, class: 'nav-link' %>
       </li>
