--- a/app/views/user/bank_slips/new.html.erb
+++ b/app/views/user/bank_slips/new.html.erb
@@ -13,11 +13,11 @@
 <%= form_with model: [:user, @payment_method, @bank_slip] do |form| %> 
 
   <p><%= form.label :bank_number %></p>
-  <p><%= form.text_field :bank_number %></p>
+  <p><%= form.number_field :bank_number, min: 0 %></p>
   <p><%= form.label :agency_number %></p>
-  <p><%= form.text_field :agency_number %></p>
+  <p><%= form.number_field :agency_number, min: 0 %></p>
   <p><%= form.label :account_number %></p>
-  <p><%= form.text_field :account_number %></p>
+  <p><%= form.number_field :account_number, min: 0 %></p>
   <p><%= form.submit 'Cadastrar' %></p>
 
 <% end %>
