--- a/app/views/user/payment_methods/show.html.erb
+++ b/app/views/user/payment_methods/show.html.erb
@@ -16,7 +16,7 @@
 <% if @payment_method.bank_slip? %>
   <%= link_to 'Contratar Meio de Pagamento', new_user_payment_method_bank_slip_path(@payment_method), class: 'btn btn-primary' %>
 <% elsif @payment_method.credit_card? %>
-  <%= link_to 'Contratar Meio de Pagamento', '#', class: 'btn btn-primary' %>
+  <%= link_to 'Contratar Meio de Pagamento', new_user_payment_method_credit_card_path(@payment_method), class: 'btn btn-primary' %>
 <% elsif @payment_method.pix? %>
   <%= link_to 'Contratar Meio de Pagamento', '#', class: 'btn btn-primary' %>
 <% end %>
