--- a/app/views/user/products/show.html.erb
+++ b/app/views/user/products/show.html.erb
@@ -9,4 +9,6 @@
 <dt><%= @product.class.human_attribute_name(:pix_discount) %></dt>
 <dd><%= number_to_percentage @product.pix_discount, precision: 0, format: "%n%" %></dd>
 
+<%= link_to 'Editar', edit_user_company_product_path(@company, @product), class: 'btn btn-primary' %>
 <%= link_to 'Voltar', user_company_products_path, class: 'btn btn-primary' %>
+<%= link_to 'Apagar', user_company_product_path(@company, @product), method: :delete,  class: 'btn btn-primary' %>
