--- a/app/views/user/companies/show.html.erb
+++ b/app/views/user/companies/show.html.erb
@@ -6,5 +6,54 @@
 <dd><%= @company.billing_address %></dd>
 <dt><%= @company.class.human_attribute_name(:billing_email ) %></dt>
 <dd><%= @company.billing_email  %></dd>
-<dt><%= @company.class.human_attribute_name(:token) %></dt>
-<dd><%= @company.token %></dd>
+
+<h3>Token de Integração</h3>
+
+<div class="card border-dark mb-3" style="max-width: 13rem;">
+  <%= @company.token %>
+</div>
+  <ul>
+    <%= link_to 'Gerar novo token', regenerate_token_user_company_path(@company), method: :put, class: 'btn btn-primary' %>
+  </ul>
+
+
+<h3>Meios de Pagamentos Contratados</h3>
+
+<% if @company.bank_slips.empty? && @company.credit_cards.empty? && @company.pixes.empty? %>
+  <p><%= 'Nenhum método de pagamento contratado' %></p>
+  <p><%= 'Deseja contratar um meio de pagamento? ' %></p>
+   <%=link_to 'Meios de Pagamentos Disponíveis', user_payment_methods_path, class: 'btn btn-primary' %>
+<% end %>
+
+<% @company.bank_slips.each do |bank_slip| %>
+<div class="card border-dark mb-3" style="max-width: 18rem;">
+  <dt><%= PaymentMethod.human_attribute_name(:form_of_payment) %></dt>
+  <dd><%= PaymentMethod.human_attribute_name("form_of_payment.#{bank_slip.payment_method.form_of_payment}") %></dd>
+  <dt><%= bank_slip.class.human_attribute_name(:bank_number) %></dt>
+  <dd><%= bank_slip.bank_number %></dd>
+  <dt><%= bank_slip.class.human_attribute_name(:agency_number) %></dt>
+  <dd><%= bank_slip.agency_number %></dd>
+  <dt><%= bank_slip.class.human_attribute_name(:account_number ) %></dt>
+  <dd><%= bank_slip.account_number  %></dd>
+</div>
+<% end %>
+
+<% @company.credit_cards.each do |credit_card| %>
+<div class="card border-dark mb-3" style="max-width: 18rem;">
+  <dt><%= PaymentMethod.human_attribute_name(:form_of_payment) %></dt>
+  <dd><%= PaymentMethod.human_attribute_name("form_of_payment.#{credit_card.payment_method.form_of_payment}") %></dd>
+  <dt><%= credit_card.class.human_attribute_name(:credit_code) %></dt>
+  <dd><%= credit_card.credit_code %></dd>
+</div>
+<% end %>
+
+<% @company.pixes.each do |pix| %>
+<div class="card border-dark mb-3" style="max-width: 18rem;">
+  <dt><%= PaymentMethod.human_attribute_name(:form_of_payment) %></dt>
+  <dd><%= PaymentMethod.human_attribute_name("form_of_payment.#{pix.payment_method.form_of_payment}") %></dd>
+  <dt><%= pix.class.human_attribute_name(:bank_number) %></dt>
+  <dd><%= pix.bank_number %></dd>
+  <dt><%= pix.class.human_attribute_name(:pix_key) %></dt>
+  <dd><%= pix.pix_key %></dd>
+</div>
+<% end %>
