Adding validations and authentication tests

--- a/app/views/user/products/index.html.erb
+++ b/app/views/user/products/index.html.erb
@@ -2,6 +2,7 @@
 
 <% if @company.products.empty? %>
   <p><%= 'Nenhum produto disponível' %></p>
+    <p><%= 'Deseja cadastrar um produto?' %></p>
 <% else %>
 
 <div class="container-fluid">
