--- a/app/views/user/products/new.html.erb
+++ b/app/views/user/products/new.html.erb
@@ -15,13 +15,13 @@
   <p><%= form.label :name %></p>
   <p><%= form.text_field :name %></p>
   <p><%= form.label :price %></p>
-  <p><%= form.text_field :price %></p>
+  <p><%= form.number_field :price %></p>
   <p><%= form.label :bank_slip_discount %></p>
-  <p><%= form.text_field :bank_slip_discount %></p>
+  <p><%= form.number_field :bank_slip_discount %></p>
   <p><%= form.label :credit_card_discount %></p>
-  <p><%= form.text_field :credit_card_discount %></p>
+  <p><%= form.number_field :credit_card_discount  %></p>
   <p><%= form.label :pix_discount %></p>
-  <p><%= form.text_field :pix_discount %></p>
+  <p><%= form.number_field :pix_discount  %></p>
   <p><%= form.submit 'Cadastrar' %></p>
 
 <% end %>
