--- a/app/views/user/companies/show.html.erb
+++ b/app/views/user/companies/show.html.erb
@@ -13,7 +13,7 @@
   <%= @company.token %>
 </div>
   <ul>
-    <%= link_to 'Gerar novo token', regenerate_token_user_company_path(@company), method: :put, class: 'btn btn-primary' %>
+    <%= link_to 'Gerar novo token', regenerate_token_user_company_path(@company.token), method: :put, class: 'btn btn-primary' %>
   </ul>
 
 
