--- a/app/views/admin/companies/edit.html.erb
+++ b/app/views/admin/companies/edit.html.erb
@@ -9,7 +9,7 @@
 
 <h1>Editando Cadastro de Empresa</h1>
 
-<%= form_with model: [:admin, @company] do |form| %> 
+<%= form_with url: admin_company_path(@company.token), model: [:admin, @company] do |form| %> 
 
   <p><%= form.label :corporate_name %></p>
   <p><%= form.text_field :corporate_name %></p>
