--- a/app/views/admin/companies/index.html.erb
+++ b/app/views/admin/companies/index.html.erb
@@ -17,7 +17,7 @@
 <tbody>
     <% @companies.each do |company| %>
       <tr>
-        <td><%= link_to company.corporate_name, admin_company_path(company) %></td>
+        <td><%= link_to company.corporate_name, admin_company_path(company.token) %></td>
         <td><%= company.cnpj %></td>
       </tr>
     <% end %>
