--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
     <% if current_user.company_id? %>
 
       <li class="nav-item">
-        <%= link_to 'Minha Empresa', user_company_path(current_user.company), class: 'nav-link' %>
+        <%= link_to 'Minha Empresa', user_company_path(current_user.company.token), class: 'nav-link' %>
       </li>
 
       <li class="nav-item">
@@ -74,7 +74,7 @@
       </li>
 
       <li class="nav-item">
-        <%= link_to 'Meus Produtos', user_company_products_path(current_user.company), class: 'nav-link' %>
+        <%= link_to 'Meus Produtos', user_company_products_path(current_user.company.token), class: 'nav-link' %>
       </li>
 
     <% else %>
